Add configuration support