@@ -13,19 +13,12 @@ homepage := Some(url("http://ergoplatform.org/"))
 licenses := Seq("CC0" -> url("https://creativecommons.org/publicdomain/zero/1.0/legalcode"))
 
 val scorexVersion = "2.0.0-RC3"
-val sigmastate = "org.scorexfoundation" %% "sigma-state" % "228.8.8"
 
 libraryDependencies ++= Seq(
   "org.scala-lang.modules" %% "scala-async" % "0.9.7",
 
   "javax.xml.bind" % "jaxb-api" % "2.+",
-  "com.iheart" %% "ficus" % "1.4.+",
-
-  "com.storm-enroute" %% "scalameter" % "0.8.+" % "test",
-  "org.scalactic" %% "scalactic" % "3.0.+" % "test",
-  "org.scalatest" %% "scalatest" % "3.0.5" % "test",
-  "org.scalacheck" %% "scalacheck" % "1.14.+" % "test",
-
+  
   ("org.scorexfoundation" %% "scorex-core" % scorexVersion).exclude("ch.qos.logback", "logback-classic"),
   "ch.qos.logback" % "logback-classic" % "1.2.3",
   "com.typesafe.scala-logging" %% "scala-logging" % "3.9.2",
@@ -39,28 +32,4 @@ libraryDependencies ++= Seq(
 
 fork := true
 
-val opts = Seq(
-  "-server",
-  // JVM memory tuning for 2g ram
-  "-Xms128m",
-  "-Xmx2G",
-  //64M for stack, reduce after optimizations
-  "-Xss64m",
-  "-XX:+ExitOnOutOfMemoryError",
-  // Java 9 support
-  "-XX:+IgnoreUnrecognizedVMOptions",
-  "--add-modules=java.xml.bind",
-
-  // from https://groups.google.com/d/msg/akka-user/9s4Yl7aEz3E/zfxmdc0cGQAJ
-  "-XX:+UseG1GC",
-  "-XX:+UseNUMA",
-  "-XX:+AlwaysPreTouch",
-
-  // probably can't use these with jstack and others tools
-  "-XX:+PerfDisableSharedMem",
-  "-XX:+ParallelRefProcEnabled",
-  "-XX:+UseStringDeduplication")
-
-// -J prefix is required by the bash script
-javaOptions in run ++= opts
 scalacOptions ++= Seq("-Xfatal-warnings", "-feature", "-deprecation")
